// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormDisplay should be able to change dropdown values 1`] = `
<div>
  <form
    class="ui form"
  >
    <div
      class="ui error message"
    >
      <div
        class="content"
      >
        <div
          class="header"
        >
          Please check the form for the following
        </div>
        <ul
          class="list"
        />
      </div>
    </div>
    <div
      class="required field"
    >
      <label>
        Dropdown
      </label>
      <div
        aria-expanded="false"
        class="ui selection dropdown"
        data-testid="dropdown"
        fieldname="Dropdown"
        name="dropdown"
        required=""
        role="listbox"
        tabindex="0"
        validators="[object Object]"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          class="divider text"
          role="alert"
        >
          Option1
        </div>
        <i
          aria-hidden="true"
          class="dropdown icon clear"
        />
        <div
          class="menu transition"
        >
          <div
            aria-checked="true"
            aria-selected="true"
            class="active selected item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              Option1
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              Option2
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormDisplay should be able to search for the search dropdown 1`] = `
<div>
  <form
    class="ui form"
  >
    <div
      class="ui error message"
    >
      <div
        class="content"
      >
        <div
          class="header"
        >
          Please check the form for the following
        </div>
        <ul
          class="list"
        />
      </div>
    </div>
    <div
      class="required field"
    >
      <label>
        Dropdown
      </label>
      <div
        aria-busy="false"
        aria-disabled="false"
        aria-expanded="false"
        class="ui search selection dropdown"
        data-testid="dropdown-search"
        fieldname="Dropdown"
        name="dropdown"
        required=""
        role="combobox"
        validators="[object Object]"
      >
        <input
          aria-autocomplete="list"
          autocomplete="off"
          class="search"
          tabindex="0"
          type="text"
          value=""
        />
        <div
          aria-atomic="true"
          aria-live="polite"
          class="divider text"
          role="alert"
        >
          Option1
        </div>
        <i
          aria-hidden="true"
          class="dropdown icon clear"
        />
        <div
          class="menu transition"
          role="listbox"
        >
          <div
            aria-checked="true"
            aria-selected="true"
            class="active selected item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              Option1
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              Option2
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormDisplay should be able to search for the search dropdown 2`] = `
<div
  aria-busy="false"
  aria-disabled="false"
  aria-expanded="true"
  class="ui active visible search selection dropdown"
  data-testid="dropdown-search"
  fieldname="Dropdown"
  name="dropdown"
  required=""
  role="combobox"
  validators="[object Object]"
>
  <input
    aria-autocomplete="list"
    autocomplete="off"
    class="search"
    tabindex="0"
    type="text"
    value="Option"
  />
  <div
    aria-atomic="true"
    aria-live="polite"
    class="divider text filtered"
    role="alert"
  >
    Option1
  </div>
  <i
    aria-hidden="true"
    class="dropdown icon clear"
  />
  <div
    class="visible menu transition"
    role="listbox"
  >
    <div
      aria-checked="true"
      aria-selected="true"
      class="active selected item"
      role="option"
      style="pointer-events: all;"
    >
      <span
        class="text"
      >
        Option1
      </span>
    </div>
    <div
      aria-checked="false"
      aria-selected="false"
      class="item"
      role="option"
      style="pointer-events: all;"
    >
      <span
        class="text"
      >
        Option2
      </span>
    </div>
  </div>
</div>
`;

exports[`FormDisplay should render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="ui form"
      >
        <div
          class="ui error message"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              Please check the form for the following
            </div>
            <ul
              class="list"
            />
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="ui form"
    >
      <div
        class="ui error message"
      >
        <div
          class="content"
        >
          <div
            class="header"
          >
            Please check the form for the following
          </div>
          <ul
            class="list"
          />
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FormDisplay should render with all the units 1`] = `
<div>
  <form
    class="ui form"
  >
    <div
      class="ui error message"
    >
      <div
        class="content"
      >
        <div
          class="header"
        >
          Please check the form for the following
        </div>
        <ul
          class="list"
        />
      </div>
    </div>
    <div
      class="ui divided padded two column grid"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <div>
            Improper Config
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="required field"
          >
            <label>
              Date
            </label>
            <div
              class="ui fluid left icon input"
            >
              <input
                type="text"
                value="1-1-2020"
              />
              <i
                aria-hidden="true"
                class="calendar icon"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="column"
        >
          <div
            class="required field"
          >
            <label>
              Name
            </label>
            <div
              class="ui input"
              data-testid="input"
              field_name="Name"
              validators="[object Object]"
            >
              <input
                name="name"
                required=""
                type="text"
                value="abcd"
              />
            </div>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="required field"
          >
            <label>
              TextArea
            </label>
            <textarea
              fieldname="TextArea"
              name="textarea"
              required=""
              rows="3"
              validators="[object Object]"
            />
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="column"
        >
          <div
            class="required field"
          >
            <label>
              Dropdown
            </label>
            <div
              aria-expanded="false"
              class="ui selection dropdown"
              data-testid="dropdown"
              fieldname="Dropdown"
              name="dropdown"
              required=""
              role="listbox"
              tabindex="0"
              validators="[object Object]"
            >
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Option1
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Option2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="required field"
          >
            <label>
              Dropdown
            </label>
            <div
              aria-busy="false"
              aria-disabled="false"
              aria-expanded="false"
              class="ui multiple search selection dropdown"
              data-testid="dropdown-search"
              fieldname="Dropdown"
              name="dropdownMul"
              required=""
              role="combobox"
              validators="[object Object]"
            >
              <input
                aria-autocomplete="list"
                autocomplete="off"
                class="search"
                tabindex="0"
                type="text"
                value=""
              />
              <span
                class="sizer"
              />
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                aria-multiselectable="true"
                class="menu transition"
                role="listbox"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Option1
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Option2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="column"
        >
          <div
            class="required field"
          >
            <label>
              Checkbox
            </label>
          </div>
          <div
            class="field"
          >
            <div
              class="ui checkbox"
              fieldname="Checkbox"
              validators="[object Object]"
            >
              <input
                class="hidden"
                name="checkbox"
                readonly=""
                tabindex="0"
                type="checkbox"
                value="1"
              />
              <label>
                Option1
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui checkbox"
              fieldname="Checkbox"
              validators="[object Object]"
            >
              <input
                class="hidden"
                name="checkbox"
                readonly=""
                tabindex="0"
                type="checkbox"
                value="2"
              />
              <label>
                Option2
              </label>
            </div>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="required field"
          >
            <label>
              Radio
            </label>
          </div>
          <div
            class="field"
          >
            <div
              class="ui radio checkbox"
              fieldname="Radio"
              validators="[object Object]"
            >
              <input
                class="hidden"
                name="radio"
                readonly=""
                tabindex="0"
                type="radio"
                value="1"
              />
              <label>
                Option1
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui radio checkbox"
              fieldname="Radio"
              validators="[object Object]"
            >
              <input
                class="hidden"
                name="radio"
                readonly=""
                tabindex="0"
                type="radio"
                value="2"
              />
              <label>
                Option2
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui radio checkbox"
              fieldname="Radio"
              validators="[object Object]"
            >
              <input
                class="hidden"
                name="radio"
                readonly=""
                tabindex="0"
                type="radio"
                value="3"
              />
              <label>
                Option3
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormDisplay should validate form 1`] = `
<div>
  <form
    class="ui error form"
  >
    <div
      class="ui error message"
    >
      <div
        class="content"
      >
        <div
          class="header"
        >
          Please check the form for the following
        </div>
        <ul
          class="list"
        >
          <li
            class="content"
          >
            Dropdown: is required
          </li>
        </ul>
      </div>
    </div>
    <div
      class="error required field"
    >
      <label>
        Dropdown
      </label>
      <div
        aria-expanded="false"
        aria-invalid="true"
        class="ui selection dropdown"
        data-testid="dropdown"
        fieldname="Dropdown"
        name="dropdown"
        required=""
        role="listbox"
        tabindex="0"
        validators="[object Object]"
      >
        <i
          aria-hidden="true"
          class="dropdown icon"
        />
        <div
          class="menu transition"
        >
          <div
            aria-checked="false"
            aria-selected="true"
            class="selected item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              Option1
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              Option2
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
